# flask_api

./: pyproject.toml  testing.py  traderNames.csv  trades.csv
Stored Procedures/: Create TradeInsert View.sql  ReadMe.txt.txt  flask_stored_procedures.sql
src/: functions.py  generate_tables.py  main.py
tests/: test_app.py  test_functions.py  test_table_gen.py
